<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Main_menu">

    <Button
        android:id="@+id/btn_play"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:layout_above="@+id/btn_options"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="25dp"
        android:text="@string/play_game" />

    <Button
        android:id="@+id/btn_options"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:layout_above="@+id/btn_help"
        android:layout_alignParentStart="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="25dp"
        android:text="@string/options" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="25dp"
        android:text="@string/help" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="272dp"
        android:layout_height="281dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="82dp"
        app:srcCompat="@drawable/impostor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="252dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/schoolbell"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textSize="42dp" />
</RelativeLayout>