<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenu_bg"
    tools:context=".UI.option">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/mine_info"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input_mines"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_col"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/textView6"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:text="6"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/input_col"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_rows"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/textView5"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:text="6"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/schoolbell"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_timesplayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/reset_timesplayed" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/board_dimensions"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/no_of_rows"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/no_of_columns"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input_rows"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/textView4"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:text="4"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />
</RelativeLayout>