<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenu_bg"
    tools:context=".UI.MainActivity">

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="124dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skipbutton" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/byline"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_byline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="229dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/schoolbell"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="257dp"
        android:layout_height="283dp"
        android:layout_centerInParent="true"
        android:cropToPadding="false" />

</RelativeLayout>